--- a/hw1/homework_1.qmd
+++ b/hw1/homework_1.qmd
@@ -59,7 +59,8 @@ The abalone with the most rings (29) had the following weights:
 -   viscera: 0.3215
 -   shell: 0.475
 
-### 4. 
+### 4.
+
 ```{r}
 # we can use mean here as the input is a vector of TRUE, FALSE which R will treat as 1, 0 
 # thus mean is equivalent the summing the TRUE entries over all observations
@@ -69,12 +70,14 @@ mean(abalone_data$viscera_weight > abalone_data$shell_weight) * 100
 About 6.51% of abalones have a viscera weight larger than shell weight.
 
 ## Part D
+
 ```{r}
 cor_table <- abalone_data %>% group_by(sex) %>% summarise(across(all_of(weight_names), ~ cor(.x, rings), .names = "{.col}")) %>% ungroup()
 cor_table
 ```
 
 ## Part E
+
 ```{r}
 # M vs F
 t.test(rings ~ sex, data = subset(abalone_data, sex %in% c("M", "F")))
@@ -87,13 +90,28 @@ t.test(rings ~ sex, data = subset(abalone_data, sex %in% c("F", "I")))
 # Problem 2
 
 ## Part A
-```{r}
 
+```{r}
+food_expend <- read.csv("hw1/food_expend/food_expenditure.csv")
+```
+
+## Part B
+
+```{r}
+colnames(food_expend) <- c("id", "age", "num_food_dependents", "state", "currency", "tot_exp", "groceries_exp", "dining_out_exp", "misc_exp", "dine_out_ct", "alcohol_inc", "program")
+```
+
+## Part C
+```{r}
+nrow(food_expend)
+food_expend <- subset(food_expend, currency == "USD")
+nrow(food_expend)
 ```
 
 # Problem 3 - Collatz conjecture
 
 ## Part A
+
 ```{r}
 nextCollatz <- function(num){
     if (!is.numeric(num)) {
@@ -116,6 +134,7 @@ nextCollatz(16)
 ```
 
 ## Part B
+
 ```{r}
 collatzSequence <- function(num) {
     seq <- c(num)
@@ -131,6 +150,16 @@ collatzSequence(19)
 ```
 
 ## Part C
-```{r}
 
+```{r}
+collatz_lens <- sapply(100:500, function(x) collatzSequence(x)[[2]])
+
+short_start_val <- which.min(collatz_lens) + 99
+long_start_val <- which.max(collatz_lens) + 99
+
+short_seq_len <- min(collatz_lens)
+long_seq_len <- max(collatz_lens)
+
+list(short = list(start = short_start_val, length = short_seq_len),
+  long  = list(start = long_start_val,  length = long_seq_len))
 ```
