--- a/hw2/hw2.qmd
+++ b/hw2/hw2.qmd
@@ -18,7 +18,8 @@ pacman::p_load(tidyverse)
 # Problem 1
 ```{r}
 # n_steps must be > 0
-random_walk1 <- function(n_steps) {
+random_walk1 <- function(n_steps, seed = NULL) {
+    if (!is.null(seed)) set.seed(seed)
     pos <- 0
     for (i in 1:n_steps) {
         step <- sample(c(-1, 1), size = 1)
@@ -36,7 +37,42 @@ random_walk1 <- function(n_steps) {
     return(pos)
 }
 
-random_walk2 <- function() {
+random_walk2 <- function(n_steps, seed = NULL) {
+    if (!is.null(seed)) set.seed(seed)
+    base_steps <- sample(c(-1, 1), size = n_steps, replace = TRUE)
 
+    random_factor <- runif(n_steps)
+    steps <- ifelse(base_steps == 1 & random_factor < 0.05, 10, base_steps) # +1 case
+    steps <- ifelse(base_steps == -1 & random_factor < 0.20, -3, steps) # -1 case
+
+    return(sum(steps))
 }
+
+random_walk3 <- function(n_steps, seed = NULL) {
+    if (!is.null(seed)) set.seed(seed)
+    one_step <- function(i) {
+        base <- if (runif(1) < 0.5) -1 else 1
+        if (base == 1) {
+            if (runif(1) < 0.05) 10 else 1
+        } else {
+            if (runif(1) < 0.20) -3 else -1
+        }
+    }
+    steps <- vapply(seq_len(n_steps), one_step, numeric(1))
+    return(sum(steps))
+}
+```
+
+```{r}
+random_walk1(10, 999)
+random_walk2(10, 999)
+random_walk3(10, 999)
+random_walk1(1000, 999)
+random_walk2(1000, 999)
+random_walk3(1000, 999)
+```
+
+## Part B
+```{r}
+
 ```
